@@ -52,13 +52,13 @@ Functions
 .. autofunction:: Merge
 
 """
+import six
+
 import errno
 import numpy as np
 import logging
 import copy
 import uuid
-import os
-import six
 
 import MDAnalysis
 import sys
@@ -209,11 +209,14 @@ class Universe(object):
                     with parser(self.filename) as p:
                         self._topology = p.parse()
                 except (IOError, OSError) as err:
+                    # There are 2 kinds of errors that might be raised here - one because the file isn't present
+                    # or the permissions are bad, second when the parser fails
                     if err.errno is not None and errno.errorcode[err.errno] in ['ENOENT', 'EACCES']:
-                        # Runs if the error is propagated from parser(no permission/ file not found)
+                        # Runs if the error is propagated due to no permission/ file not found
                         six.reraise(*sys.exc_info())
 
                     else:
+                        # Runs when the parser fails
                         raise IOError("Failed to load from the topology file {0}"
                                       " with parser {1}.\n"
                                       "Error: {2}".format(self.filename, parser, err))
